[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simplepeft"
authors = [{name = "Florian Zimmermeister", email = "flozi00.fz@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = ['transformers>=4.28.1', 'datasets>=2.12.0', 'peft>=0.2.0', 'lightning==2.0.1', 'accelerate>=0.19.0', 'gputil>=1.4.0', 'lion-pytorch>=0.1.2', 'librosa>=0.10.0.post2', 'soundfile>=0.12.1', 'unidecode>=1.3.6', 'speechbrain>=0.5.14', 'sentencepiece>=0.1.99', 'bitsandbytes==0.37.0', 'deepspeed>=0.9.2']
